--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
 	"name": "notes-app",
-	"homepage": "https://gitname.github.io/react-gh-pages",
+	"homepage": "https://mukeshodhano.github.io/notes-app/",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist",
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview"
 	},
@@ -16,7 +18,7 @@
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.3.3",
+		"@types/react": "^18.3.3",g
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
 		"gh-pages": "^6.1.1",
